# enrede

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: encoding.rs  utils.rs  validate.rs
src/: cstr.rs  cstring.rs  encoding.rs  err.rs  lib.rs  str.rs  string.rs  utils.rs
src/encoding/: ascii.rs  iso.rs  jis.rs  mac.rs  utf.rs  win.rs
src/encoding/jis/: x0208_tables.rs
src/str/: iter.rs
src/string/: chunks.rs
