[package]
name = "enrede"
version = "0.1.1"
edition = "2021"
keywords = ["encoding", "string", "algorithm", "utf8"]
categories = ["encoding", "algorithms"]
description = "An easy-to-use string encoding library, providing an interface similar to str/String."
license = "MIT OR Apache-2.0"
repository = "https://github.com/CraftSpider/enrede"

[features]
defaults = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
bytemuck = { version = "1.16", features = ["derive", "must_cast"] }
arrayvec = "0.7"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[profile.bench]
debug = true

[[bench]]
name = "validate"
harness = false
