[package]
name = "enrede"
version = "0.1.2"
edition = "2021"
keywords = ["encoding", "string", "algorithm", "utf8"]
categories = ["encoding", "algorithms"]
description = "An easy-to-use string encoding library, providing an interface similar to str/String."
license = "MIT OR Apache-2.0"
repository = "https://github.com/CraftSpider/enrede"

[features]
defaults = ["std"]
# Allow dependency on `std`
std = ["alloc"]
# Allow dependency on `alloc`
alloc = ["serde?/alloc"]
# Add support for using encodings as `Distribution` to generate characters valid for that encoding.
rand = ["dep:rand"]
# Add support for serializing/deserializing types
serde = ["dep:serde"]

[dependencies]
bytemuck = { version = "1.16", features = ["derive", "must_cast"] }
arrayvec = "0.7"
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
byte-unit = "5.1"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[profile.bench]
debug = true

[[bench]]
name = "encoding"
harness = false
required-features = ["alloc", "rand"]

[package.metadata.docs.rs]
all-features = true
